# personal

./: .dependency-cruiser.js  .gitignore  .prettierignore  .prettierrc  Agents.md  Build.md  Cargo.toml  Plan.md  README.md  biome.json  blueprint.md  eslint.config.js  index.html  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  typedoc.json  typedoc.tsconfig.json
.github/workflows/: ci.yml  docs.yml  release.yml
.husky/: post-commit  pre-push
crates/egui-elegant/: Cargo.toml  README.md
crates/egui-elegant/examples/: noto_multilingual.rs  showcase.rs  showcase_noflex.rs
crates/egui-elegant/src/: dropdown.rs  inputs.rs  lib.rs  progress.rs  tabs.rs  taginput.rs  theme.rs  toast.rs  traits.rs
crates/elegant_ui/: Cargo.toml
crates/elegant_ui/src/: accordion.rs  alert.rs  avatar.rs  badge.rs  button.rs  card.rs  dropdown.rs  inputs.rs  lib.rs  progress.rs  skeleton.rs  tabs.rs  taginput.rs  theme.rs
docs/: dependency-graph.dot
docs/arch/: 0001-sqlite-encryption-driver.md  0002-onboarding-guard.md  0003-integer-currency.md  0004-toml-import-templates.md  0005-db-connection-handle.md  0006-e2e-testing-playwright-tauri-driver.md  0007-three-pane-layout.md  0008-theme-system.md  0009-frontend-framework-evolution.md
e2e/: onboarding.spec.ts
personal-core/: Cargo.toml
personal-core/src/: lib.rs
personal-core/src/domain/: categorizer.rs  ledger.rs
personal-core/src/infrastructure/: core_ledger.rs  csv_excel_parser.rs  mod.rs  sqlite_storage.rs
personal-finance/: Cargo.toml
personal-finance/src/: app.rs  lib.rs  main.rs  sankey.rs
src/: App.tsx  app.rs  lib.rs  main.rs  sankey.rs  state.rs
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/migrations/: 0001_initial.sql
src-tauri/src/: classifier.rs  db.rs  error.rs  ipc.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: accounts.rs  import.rs  mod.rs  security.rs  transactions.rs
src-tauri/src/parser/: csv_parser.rs  excel.rs  mod.rs
src-tauri/src/template/: types.rs
src/components/: ExpandableSankey.tsx
src/domain/: categorizer.rs  mod.rs  models.rs  parser.rs  storage.rs
src/infrastructure/: core_ledger.rs  csv_excel_parser.rs  mod.rs  sqlite_storage.rs
src/primitives/: createIpcCommand.ts
src/routes/: +page.svelte
src/types/: ipc.ts  ipc_bindings.ts
src/ui/: alert.rs  avatar.rs  badge.rs  button.rs  card.rs  inputs.rs  mod.rs  progress.rs  theme.rs
