# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "personal"
description = "Personal Finance made private."
authors = ["kitswas"]
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.35"
egui = "0.35"
serde = { version = "1.0", features = ["derive"] }
# Async runtime
tokio = { version = "1.53", features = ["full"] }

# Full-page AES-256 encrypted SQLite — bundles SQLCipher + vendored OpenSSL.
# See ADR 0001 for the rationale.
rusqlite = { version = "0.40", features = ["bundled-sqlcipher"] }

# OS keyring — stores the master DB key; never writes the key to disk.
keyring = "4.1"

# Excel / CSV parsing for import pipeline (Phase 2+).
calamine = { version = "0.36", features = ["dates"] }
csv = "1"

# TOML for import templates (Phase 2+).
toml = "1.1"

# Regex with size_limit to prevent catastrophic backtracking (Phase 2+).
regex = "1.13"

# Utilities.
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
ts-rs = "12.0"
egui-elegant = { git = "https://github.com/kitswas/egui-elegant", version = "0.1.0", features = ["async"] }

[dev-dependencies]
# Isolated temporary DB files per test — no shared state between tests.
tempfile = "3"
