[package]
name = "personal-finance-core"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Core double-entry accounting engine for personal-finance"
repository = "https://github.com/kitswas/personal"
publish = true

[dependencies]
rusqlite = { version = "0.40", features = ["bundled-sqlcipher", "load_extension"] }
keyring = "4.1"
calamine = { version = "0.36", features = ["dates"] }
csv = "1"
toml = "1.1"
regex = "1.13"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
