[package]
name = "egui-elegant"
version = "0.1.0"
edition = "2024"
description = "A beautiful, modern, and elegant UI component library for egui"

[dependencies]
dark-light = "2.0.0"
egui = "0.35"
egui_flex = { version = "0.7.0", optional = true }
winreg = "0.56.0"

[features]
flex = ["dep:egui_flex"]

[dev-dependencies]
eframe = "0.35"
crossbeam-channel = "0.5"
